[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_4p5ck"]
[ext_resource type="PackedScene" path="res://scenes/game/table/table.tscn" id="2_j8w03"]
[ext_resource type="PackedScene" path="res://scenes/game/ui/game_ui.tscn" id="3_vxpw8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymm7p"]
bg_color = Color(0.0823529, 0.329412, 0.14902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0352941, 0.156863, 0.0705882, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qcb2t"]
bg_color = Color(0.156863, 0.196078, 0.87451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0627451, 0.0784314, 0.356863, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.156863)
shadow_size = 2
shadow_offset = Vector2(2, 2)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4p5ck")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.431373, 0.196078, 1)

[node name="TableContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Table" parent="TableContainer" instance=ExtResource("2_j8w03")]
layout_mode = 2

[node name="CurrentProblemDisplay" type="Control" parent="TableContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayersContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Player1Container" type="Panel" parent="PlayersContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -180.0
offset_right = 500.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ymm7p")

[node name="PlayerNameLabel" type="Label" parent="PlayersContainer/Player1Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -13.0
offset_right = 120.0
offset_bottom = 13.0
grow_vertical = 2
text = "Player 1"
vertical_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="PlayersContainer/Player1Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Player2Container" type="Panel" parent="PlayersContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ymm7p")

[node name="PlayerNameLabel" type="Label" parent="PlayersContainer/Player2Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -13.0
offset_right = 120.0
offset_bottom = 13.0
grow_vertical = 2
text = "Player 2"
vertical_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="PlayersContainer/Player2Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Player3Container" type="Panel" parent="PlayersContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = 360.0
grow_vertical = 2
rotation = 1.5708
theme_override_styles/panel = SubResource("StyleBoxFlat_ymm7p")

[node name="PlayerNameLabel" type="Label" parent="PlayersContainer/Player3Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -13.0
offset_right = 120.0
offset_bottom = 13.0
grow_vertical = 2
text = "Player 3"
vertical_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="PlayersContainer/Player3Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Player4Container" type="Panel" parent="PlayersContainer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -360.0
offset_right = -20.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
rotation = -1.5708
theme_override_styles/panel = SubResource("StyleBoxFlat_ymm7p")

[node name="PlayerNameLabel" type="Label" parent="PlayersContainer/Player4Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -13.0
offset_right = 120.0
offset_bottom = 13.0
grow_vertical = 2
text = "Player 4"
vertical_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="PlayersContainer/Player4Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Player5Container" type="Panel" parent="PlayersContainer"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = -350.0
offset_right = 1140.0
offset_bottom = -270.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ymm7p")

[node name="PlayerNameLabel" type="Label" parent="PlayersContainer/Player5Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -13.0
offset_right = 120.0
offset_bottom = 13.0
grow_vertical = 2
text = "Player 5"
vertical_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="PlayersContainer/Player5Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TurnIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_qcb2t")
text = "Player 1's Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameUI" parent="." instance=ExtResource("3_vxpw8")]
layout_mode = 1
